Size the version screen in repositionElements like vanilla.
Create controls in the header and the version list in the contents
area, then set widths, header height, and list bounds on resize via
updateSize instead of a custom two-pass layout.

Co-authored-by: JustAlittleWolf <JustAlittleWolf@users.noreply.github.com>