@@ -12,6 +12,7 @@ import net.minecraft.client.gui.components.CycleButton;
 import net.minecraft.client.gui.components.EditBox;
 import net.minecraft.client.gui.components.MultiLineTextWidget;
 import net.minecraft.client.gui.components.StringWidget;
+import net.minecraft.client.gui.layouts.HeaderAndFooterLayout;
 import net.minecraft.client.gui.layouts.LinearLayout;
 import net.minecraft.client.gui.narration.NarratableEntry;
 import net.minecraft.client.gui.narration.NarrationElementOutput;
@@ -24,8 +25,7 @@ import net.minecraft.network.chat.TextColor;
 import java.util.List;
 
 public class MovementVersionScreen extends OptionsSubScreen {
-    private static final int MIN_CONTENT_WIDTH = 200;
-    private static final int MAX_CONTENT_WIDTH = 360;
+    private static final int CONTROL_WIDTH = 310;
     private static final int FIELD_HEIGHT = 20;
     private static final Component TITLE = Component.translatable("legacyparkourcompat.version.title");
     private static final Component ENABLED = Component.translatable("legacyparkourcompat.version.enabled");
@@ -35,7 +35,7 @@ public class MovementVersionScreen extends OptionsSubScreen {
     private static final Component NONE_AVAILABLE = Component.translatable("legacyparkourcompat.version.available.none");
 
     private boolean wanted = MovementVersions.isWanted();
-    private LinearLayout contents;
+    private LinearLayout header;
     private CycleButton<Boolean> enabledButton;
     private EditBox versionBox;
     private MultiLineTextWidget statusWidget;
@@ -71,13 +71,33 @@ public class MovementVersionScreen extends OptionsSubScreen {
             : EditBox.DEFAULT_TEXT_COLOR;
     }
 
-    private int contentWidth() {
-        int available = Math.max(20, this.width - 40);
-        return Math.clamp(available, Math.min(MIN_CONTENT_WIDTH, available), MAX_CONTENT_WIDTH);
+    private int controlWidth() {
+        return Math.max(20, Math.min(CONTROL_WIDTH, this.width - 40));
     }
 
-    private int listWidth() {
-        return Math.max(this.contentWidth(), Math.max(20, this.width - 20));
+    @Override
+    protected void addTitle() {
+        this.header = this.layout.addToHeader(LinearLayout.vertical().spacing(4));
+        this.header.defaultCellSetting().alignHorizontallyCenter();
+        this.header.addChild(new StringWidget(this.title, this.font));
+
+        this.enabledButton = CycleButton.onOffBuilder(this.wanted)
+            .create(0, 0, CONTROL_WIDTH, 20, ENABLED, (button, value) -> this.setWanted(value));
+        this.header.addChild(this.enabledButton);
+
+        this.header.addChild(new StringWidget(FIELD_LABEL, this.font));
+        this.versionBox = new EditBox(this.font, 0, 0, CONTROL_WIDTH, FIELD_HEIGHT, FIELD_LABEL);
+        this.versionBox.setMaxLength(64);
+        this.versionBox.setHint(HINT);
+        this.versionBox.setValue(MovementVersions.getInput());
+        this.versionBox.setResponder(this::onVersionChanged);
+        this.header.addChild(this.versionBox);
+
+        this.statusWidget = new MultiLineTextWidget(Component.empty(), this.font)
+            .setMaxWidth(CONTROL_WIDTH)
+            .setCentered(true);
+        this.header.addChild(this.statusWidget);
+        this.header.addChild(new StringWidget(AVAILABLE, this.font));
     }
 
     @Override
@@ -86,58 +106,42 @@ public class MovementVersionScreen extends OptionsSubScreen {
 
     @Override
     protected void addContents() {
-        int contentWidth = this.contentWidth();
-        int spacing = this.layout.getContentHeight() < 160 ? 4 : 6;
-        this.contents = this.layout.addToContents(LinearLayout.vertical().spacing(spacing));
-        this.contents.defaultCellSetting().alignHorizontallyCenter();
-
-        this.enabledButton = CycleButton.onOffBuilder(this.wanted)
-            .create(0, 0, contentWidth, 20, ENABLED, (button, value) -> this.setWanted(value));
-        this.contents.addChild(this.enabledButton);
-
-        LinearLayout field = LinearLayout.vertical().spacing(2);
-        field.defaultCellSetting().alignHorizontallyCenter();
-        field.addChild(new StringWidget(FIELD_LABEL, this.font));
-        this.versionBox = new EditBox(this.font, contentWidth, FIELD_HEIGHT, FIELD_LABEL);
-        this.versionBox.setMaxLength(64);
-        this.versionBox.setHint(HINT);
-        this.versionBox.setValue(MovementVersions.getInput());
-        this.versionBox.setResponder(this::onVersionChanged);
-        field.addChild(this.versionBox);
-        this.contents.addChild(field);
-
-        this.statusWidget = new MultiLineTextWidget(Component.empty(), this.font)
-            .setMaxWidth(contentWidth)
-            .setCentered(true);
-        this.contents.addChild(this.statusWidget);
-
         List<ParkourVersion> versions = MovementVersions.listedVersions();
         if (versions.isEmpty()) {
-            this.contents.addChild(new MultiLineTextWidget(NONE_AVAILABLE, this.font)
-                .setMaxWidth(contentWidth)
+            this.layout.addToContents(new MultiLineTextWidget(NONE_AVAILABLE, this.font)
+                .setMaxWidth(CONTROL_WIDTH)
                 .setCentered(true));
-            this.versionLabels = null;
         } else {
-            this.contents.addChild(new StringWidget(AVAILABLE, this.font));
-            this.versionLabels = new VersionLabelsWidget(
+            this.versionLabels = this.layout.addToContents(new VersionLabelsWidget(
                 this.font,
-                versions.stream().map(ParkourVersion::displayLabel).toList(),
-                this.listWidth(),
-                this.font.lineHeight
-            );
-            this.contents.addChild(this.versionLabels);
+                versions.stream().map(ParkourVersion::displayLabel).toList()
+            ));
         }
-
         this.refreshInteractiveState();
         this.refreshStatus();
     }
 
     @Override
     protected void repositionElements() {
-        this.applyHorizontalSizes();
-        this.layout.arrangeElements();
-        this.applyVersionListHeight();
-        this.layout.arrangeElements();
+        int controlWidth = this.controlWidth();
+        if (this.enabledButton != null) {
+            this.enabledButton.setWidth(controlWidth);
+        }
+        if (this.versionBox != null) {
+            this.versionBox.setWidth(controlWidth);
+        }
+        if (this.statusWidget != null) {
+            this.statusWidget.setMaxWidth(controlWidth);
+        }
+        if (this.header != null) {
+            this.header.arrangeElements();
+            int maxHeader = Math.max(HeaderAndFooterLayout.DEFAULT_HEADER_AND_FOOTER_HEIGHT, this.height - this.layout.getFooterHeight() - 40);
+            this.layout.setHeaderHeight(Math.min(this.header.getHeight() + 8, maxHeader));
+        }
+        super.repositionElements();
+        if (this.versionLabels != null) {
+            this.versionLabels.updateSize(this.width, this.layout);
+        }
     }
 
     @Override
@@ -147,31 +151,6 @@ public class MovementVersionScreen extends OptionsSubScreen {
         } else if (this.enabledButton != null) {
             this.setInitialFocus(this.enabledButton);
         }
-    }
-
-    private void applyHorizontalSizes() {
-        int contentWidth = this.contentWidth();
-        if (this.enabledButton != null) {
-            this.enabledButton.setWidth(contentWidth);
-        }
-        if (this.versionBox != null) {
-            this.versionBox.setWidth(contentWidth);
-        }
-        if (this.statusWidget != null) {
-            this.statusWidget.setMaxWidth(contentWidth);
-        }
-        if (this.versionLabels != null) {
-            this.versionLabels.updateSize(this.listWidth(), this.versionLabels.getHeight());
-        }
-    }
-
-    private void applyVersionListHeight() {
-        if (this.versionLabels == null || this.contents == null) {
-            return;
-        }
-        int usedWithoutList = this.contents.getHeight() - this.versionLabels.getHeight();
-        int listHeight = Math.max(this.font.lineHeight, this.layout.getContentHeight() - usedWithoutList);
-        this.versionLabels.updateSize(this.listWidth(), listHeight);
     }
 
     private void setWanted(boolean wanted) {
@@ -226,8 +205,8 @@ public class MovementVersionScreen extends OptionsSubScreen {
         private final int rowHeight;
         private int columns = 1;
 
-        VersionLabelsWidget(Font font, List<String> labels, int width, int height) {
-            super(0, 0, width, height, AVAILABLE, defaultSettings(font.lineHeight + ROW_GAP));
+        VersionLabelsWidget(Font font, List<String> labels) {
+            super(0, 0, 0, 0, AVAILABLE, defaultSettings(font.lineHeight + ROW_GAP));
             this.font = font;
             this.labels = List.copyOf(labels);
             int widest = 1;
@@ -236,16 +215,17 @@ public class MovementVersionScreen extends OptionsSubScreen {
             }
             this.maxLabelWidth = widest;
             this.rowHeight = font.lineHeight + ROW_GAP;
-            this.relayout();
         }
 
-        void updateSize(int width, int height) {
-            this.setSize(width, height);
-            this.relayout();
+        void updateSize(int width, HeaderAndFooterLayout layout) {
+            this.setSize(width, layout.getContentHeight());
+            this.setPosition(0, layout.getHeaderHeight());
             this.refreshScrollAmount();
         }
 
-        private void relayout() {
+        @Override
+        public void setSize(int width, int height) {
+            super.setSize(width, height);
             this.columns = this.columnsFor(this.width);
             if (this.contentHeight() > this.getHeight()) {
                 this.columns = this.columnsFor(this.innerWidth(true));
